Parameter panel styling. Removed red.

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1048,7 +1048,7 @@
             width: 100%;
             overflow: auto;
             background: #515151;
-            padding: 10px;
+            padding: 10px 0;
         }
         
             #parameters-of-master .parameters-selection-body {
@@ -1069,7 +1069,7 @@
             
                 .parameter-row input {
                     background: transparent;
-                    padding: 0 4px;
+                    padding: 4px;
                 }
                 
                     #parameters-of-master .parameter-row input {
@@ -1079,22 +1079,30 @@
                     #parameters-of-glyph .parameter-row input {
                         color: #515151;
                     }
-                    
-                    #parameters-of-master input:focus, #parameters-of-master input:hover {
-                        background: #F01616;
-                        color: #515151;
+
+                    #parameters-of-master input:hover {
+                        background-color: #6a6a6a;
                     }
-                    
-                    #parameters-of-glyph input:focus, #parameters-of-glyph input:hover {
-                        background: #F01616;
-                        color: #eee;
+
+                    #parameters-of-master input:focus {
+                        background: white;
+                        color: black;
+                    }
+
+                    #parameters-of-glyph input:hover {
+                        background: #dcdcdc;
+                    }
+
+                    #parameters-of-glyph input:focus {
+                        background: white;
+                        color: black;
                     }
         
                 .parameter-key {
                     width: 40%;
                     display: inline-block;
                     text-align: right;
-                    padding: 2px;
+                    padding: 4px;
                     float: left;
                 }
                 
@@ -1102,22 +1110,24 @@
                     width: 10%;
                     display: inline-block;
                     text-align: center;
-                    padding: 2px;
+                    padding: 4px;
                     float: left;
                 }
                 
                 .operator-value {
                     width: 50%;
                     display: inline-block;
-                    padding: 2px;
+                    padding: 0;
                     float: left;
-                    padding-right: 20px;
+                    padding-right: 5px;
                 }
                 
                     .operator-value input {
                         background: transparent;
-                        width: 40%;
+                        width: 100%;
                         border: 0;
+                        line-height: 1em;
+                        /*font-family: sans-serif;*/
                     }
                     
                     .calculated-value {
