Display a download link when the export zip is ready. Allow the user to click that link to trigger an immediate Save As action. (issue #522)

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1375,8 +1375,12 @@
             color: #000;
         }
 
-
-
+        #blob_download {
+            position: absolute;
+            top: 12px;
+            left: 12px;
+            color: #000;
+        }
             
 /**************** local menu ************************/
 
