--- a/purple-pill/templates/specimen-toolbar.html
+++ b/purple-pill/templates/specimen-toolbar.html
@@ -8,7 +8,7 @@
                 {{specim.name}}
             </div>
         </div>
-        <div ng-repeat-end class="lm-divider"></div>
+        <div ng-repeat-end class="lm-divider" ng-if="!$last"></div>
     </div>
 </localmenu>
 
