--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -9,11 +9,11 @@
                         <div class="parameter-operator">{{operator.name}}</div>
                         <div class="operator-value">
                             <span ng-if="!operator.range">
-                                <input ng-model="operator.low" ng-blur="changeParameter(parameter.name, operator, 'master', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'master', false, $event)"> 
+                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'master', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'master', false, $event)"> 
                             </span>
                             <span ng-if="operator.range"> 
-                                <input ng-model="operator.newLow" ng-init="operator.newLow = operator.low" ng-blur="changeParameter(parameter.name, operator, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'master', true, $event)"> to
-                                <input ng-model="operator.newHigh" ng-init="operator.newHigh = operator.high" ng-blur="changeParameter(parameter.name, operator, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'master', true, $event)">
+                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'master', true, $event)"> to
+                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current"  ng-blur="changeParameter(parameter.name, operator, operator.high, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.high, 'master', true, $event)">
                             </span>
                         </div>
                     </div> 
@@ -31,11 +31,11 @@
                         <div class="parameter-operator">{{operator.name}}</div>
                         <div class="operator-value">
                             <span ng-if="!operator.range">
-                                <input ng-model="operator.low" ng-blur="changeParameter(parameter.name, operator, 'glyph', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'glyph', false, $event)"> 
+                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'glyph', false, $event)"> 
                             </span>
                             <span ng-if="operator.range"> 
-                                <input ng-model="operator.newLow" ng-init="operator.newLow = operator.low" ng-blur="changeParameter(parameter.name, operator, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'glyph', true, $event)"> to
-                                <input ng-model="operator.newHigh" ng-init="operator.newHigh = operator.high" ng-blur="changeParameter(parameter.name, operator, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'glyph', true, $event)">
+                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'glyph', true, $event)"> to
+                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current" ng-blur="changeParameter(parameter.name, operator, operator.high, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.high, 'glyph', true, $event)">
                             </span>
                         </div>
                     </div>               
