This is a work in progress attempt at implementing the import ufo feature. Beware! This is broken!

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1534,7 +1534,7 @@
         
 /**************** alert ************************/
 
-    #dialog {
+    #importufo_dialog, #dialog {
         display: none;
         position: fixed;
         z-index: 10001;
