--- a/purple-pill/templates/masters.html
+++ b/purple-pill/templates/masters.html
@@ -3,13 +3,30 @@
         <b>Masters</b>
     </div>
     <div class="lm-body" ng-if="data.localmenu.masters">
-        <div class="lm-button" ng-mouseup="importUfo()">Import ufo…</div>
+        <div class="lm-button" ng-mouseup="importUfo_dialog_open()">Import ufo…</div>
         <div class="lm-divider"></div>
         <div class="lm-button" ng-mouseup="duplicateMasters()" ng-class="{'inactive': !areMastersSelected()}">Duplicate</div>
         <div class="lm-divider"></div>
         <div class="lm-button" ng-mouseup="deleteMasters()" ng-class="{'inactive': !areMastersSelected()}">Delete…</div>
     </div>
 </localmenu>
+
+
+<div id="importufo_dialog">
+    <h2>Want to load your own UFO?</h2>
+    <p>Show us you want this by buying a T shirt:</p>
+    <br>
+    <ul>
+        <li>
+            <a title='Support the project and buy a T shirt (USA)' href='http://teespring.com/metapolator-beta-0-3-0' target='_blank' class='newtab'>USA</a>
+        </li>
+        <li>
+            <a title='Support the project and buy a T shirt (Worldwide)' href='http://metapolator.spreadshirt.com' target='_blank' class='newtab'>Worldwide</a>
+        </li>
+    </ul>
+    <br><br>
+    <input type='file' accept='application/zip' onchange='angular.element(this).scope().handleUFOimportFiles(this)' />
+</div>
 
 <div class="panel-border panel-border-with-menu">
     <div id="masters-list">
