--- a/purple-pill/templates/specimen-toolbar.html
+++ b/purple-pill/templates/specimen-toolbar.html
@@ -51,7 +51,7 @@
 <div class="toolbar-set fontby-container">
     <localmenu class="localmenu lm-fontby right" ng-if="selectedSpecimen.name != 'glyph range'">
         <div class="lm-head" ng-mousedown="data.selectMenu('fontby1')">
-            {{filterOptions.selectedFontby}}
+            <div class="lm-head-label">Font by: {{filterOptions.selectedFontby}}</div>
         </div>
         <div class="lm-body" ng-if="data.localmenu.fontby1">
             <div class="lm-button" ng-repeat="fontby in fontbys" ng-class="{'lm-selected': fontby == filterOptions.selectedFontby}" ng-mouseup="selectFontby(fontby)">
@@ -59,5 +59,4 @@
             </div>
         </div>
     </localmenu>
-    <div class="toolbar-label fontby-label">Font by: </div>
 </div>
