--- a/purple-pill/templates/specimen-toolbar.html
+++ b/purple-pill/templates/specimen-toolbar.html
@@ -17,28 +17,26 @@
     <div title="Drag to Change Font Size" class="specimen-tool size-rope">
         <size-rope></size-rope>
     </div>
+
+    <localmenu class="localmenu lm-lineheight specimen-tool">
+        <div class="lm-head" ng-mousedown="data.selectMenu('lineheight')">
+            <div ng-if="lineHeightSetting != 'Custom'" class="lineheight-icon-head" >
+                <img ng-src="img/{{lineHeightSetting}}.png" title="{{lineHeightSetting}}">
+            </div>
+            <input class="lineheight-custom" ng-if="lineHeightSetting == 'Custom'" ng-model="data.customLineHeight" ng-focus="updateLineHeightCustom('blur')" ng-keyup="updateLineHeightCustom($event)">
+        </div>
+        <div class="lm-body" ng-if="data.localmenu.lineheight">
+            <div class="lm-button" ng-click="changeLineHeightSetting(option)" ng-repeat="option in lineHeightOptions track by $index" ng-class="{'lm-selected': option == lineHeightSetting}">
+                {{option}}
+            </div>
+            <div class="lm-divider"></div>
+            <div class="lm-button" ng-click="changeLineHeightSetting('Custom')" ng-class="{'lm-selected': lineHeightSetting == 'Custom'}">
+                Custom
+            </div>
+        </div>
+    </localmenu>
 </div>
-
-<localmenu class="localmenu lm-lineheight toolbar-set" class="left">
-    <div class="lm-head" ng-mousedown="data.selectMenu('lineheight')">
-        <div ng-if="lineHeightSetting != 'Custom'" class="lineheight-icon-head" >
-            <img ng-src="img/{{lineHeightSetting}}.png" title="{{lineHeightSetting}}">
-        </div>
-        <input class="lineheight-custom" ng-if="lineHeightSetting == 'Custom'" ng-model="data.customLineHeight" ng-focus="updateLineHeightCustom('blur')" ng-keyup="updateLineHeightCustom($event)">
-    </div>
-    <div class="lm-body" ng-if="data.localmenu.lineheight">
-        <div class="lm-button" ng-click="changeLineHeightSetting(option)" ng-repeat="option in lineHeightOptions track by $index" ng-class="{'lm-selected': option == lineHeightSetting}">
-            {{option}}
-        </div>
-        <div class="lm-divider"></div>
-        <div class="lm-button" ng-click="changeLineHeightSetting('Custom')" ng-class="{'lm-selected': lineHeightSetting == 'Custom'}">
-            Custom
-        </div>
-    </div>
-</localmenu>
-
-{{customLineHeight}}
-
+    
 <div class="toolbar-set">
     <input ng-if="selectedSpecimen.name != 'Glyph Range'" placeholder="Mix glyphs…" type="text" id="filter" ng-model="filterOptions.filter" ng-trim="false" size="7" class="specimen-tool">
     <input ng-if="selectedSpecimen.name == 'Glyph Range'" placeholder="Filter" type="text" id="filter" ng-model="filterOptions.filter" ng-trim="false" size="7" class="specimen-tool">
