#480 lm hover color darker

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1498,7 +1498,7 @@
         }
         
             .lm-button:hover, .lm-button.lm-selected {
-                background: #eee;
+                background: #dcdcdc;
             }
             
             .lm-button-hover {
