#480 bug: checkmark for custom

--- a/purple-pill/templates/specimen-toolbar.html
+++ b/purple-pill/templates/specimen-toolbar.html
@@ -33,7 +33,7 @@
             </div>
             <div class="lm-divider"></div>
             <div class="lm-button" ng-mouseup="changeLineHeightSetting(lineHeightOptionCustom)">
-                <div class="lm-checkmark"><span ng-if="option.name == 'custom'">H</span></div>Custom
+                <div class="lm-checkmark"><span ng-if="lineHeightSetting.name == 'custom'">H</span></div>Custom
             </div>
         </div>
     </localmenu>
