Add spreadsheet t shirt links

--- a/purple-pill/templates/menu.html
+++ b/purple-pill/templates/menu.html
@@ -41,7 +41,8 @@
             <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">+Metapolator</a></b></div>
             <div class="lm-divider"></div>
             <div class="lm-button"><form id="help-paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank"><a title="Give financial support via Paypal" href="javascript:{}" onclick="document.getElementById('help-paypal').submit(); return false;">Donate</a><input type="hidden" name="cmd" value="_s-xclick"><input type="hidden" name="hosted_button_id" value="CMQZM2FJDP4VA"></form></div>
-            <div class="lm-button"><a title="Support the project with a T shirt" href="http://teespring.com/metapolator-beta-0-3-0" target="_blank">Buy T Shirts</a></div>
+            <div class="lm-button"><a title="Support the project with a T shirt (USA)" href="http://teespring.com/metapolator-beta-0-3-0" target="_blank">Buy T Shirts (USA)</a></div>
+            <div class="lm-button"><a title="Support the project with a T shirt (EU)" href="http://metapolator.spreadshirt.com" target="_blank">Buy T Shirts (EU)</a></div>
             <div class="lm-divider"></div>
             <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Technology Demo</a></b></div>
             </div>
