--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -31,7 +31,7 @@
                         <div class="parameter-operator">{{operator.name}}</div>
                         <div class="operator-value">
                             <span ng-if="!operator.range">
-                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, 'glyph', false, $event)"> 
+                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'glyph', false, $event)"> 
                             </span>
                             <span ng-if="operator.range"> 
                                 <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'glyph', true, $event)"> to
@@ -43,9 +43,7 @@
             </div>
         </div>
     </div>
-    
-    
-    
+       
     <div id="parameters-control-panel" class="control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
         <div id="control-panel-parameters">
             <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter.name == panelParameter.name}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameterToPanel(parameter)">{{parameter.displayName}}</div>
