--- a/purple-pill/templates/parameters.html
+++ b/purple-pill/templates/parameters.html
@@ -5,15 +5,15 @@
             <div class="parameters-selection-body">
                 <div ng-repeat="parameter in selectionParametersMasters" class="parameter-row">
                     <div ng-repeat="operator in parameter.operators track by $index">
-                        <div class="parameter-key"><span ng-if="$index == 0">{{parameter.displayName}}</span></div>
-                        <div class="parameter-operator">{{operator.name}}</div>
+                        <div ng-click="openParameterPanel(parameter, $event, 'master')" class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
+                        <div class="parameter-operator" ng-click="openOperatorPanel(parameter, operator, $event, 'master')">{{operator.name}}</div>
                         <div class="operator-value">
                             <span ng-if="!operator.range">
-                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'master', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'master', false, $event)"> 
+                                <input ng-model="operator.low.current" ng-blur="changeValue(parameter.name, operator, operator.low, 'master', false, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.low, 'master', false, $event)"> 
                             </span>
                             <span ng-if="operator.range"> 
-                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'master', true, $event)"> to
-                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current"  ng-blur="changeParameter(parameter.name, operator, operator.high, 'master', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.high, 'master', true, $event)">
+                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeValue(parameter.name, operator, operator.low, 'master', true, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.low, 'master', true, $event)"> to
+                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current"  ng-blur="changeValue(parameter.name, operator, operator.high, 'master', true, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.high, 'master', true, $event)">
                             </span>
                         </div>
                     </div> 
@@ -27,15 +27,15 @@
             <div class="parameters-selection-body">
                 <div ng-repeat="parameter in selectionParametersGlyphs" class="parameter-row">
                     <div ng-repeat="operator in parameter.operators track by $index">
-                        <div class="parameter-key"><span ng-if="$index == 0">{{parameter.displayName}}</span></div>
-                        <div class="parameter-operator">{{operator.name}}</div>
+                        <div ng-click="openParameterPanel(parameter, $event, 'glyph')" class="parameter-key"><span ng-if="$index == 0">{{parameter.name}}</span></div>
+                        <div class="parameter-operator" ng-click="openOperatorPanel(parameter, operator, $event, 'glyph')">{{operator.name}}</div>
                         <div class="operator-value">
                             <span ng-if="!operator.range">
-                                <input ng-model="operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', false, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'glyph', false, $event)"> 
+                                <input ng-model="operator.low.current" ng-blur="changeValue(parameter.name, operator, operator.low, 'glyph', false, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.low, 'glyph', false, $event)"> 
                             </span>
                             <span ng-if="operator.range"> 
-                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeParameter(parameter.name, operator, operator.low, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.low, 'glyph', true, $event)"> to
-                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current" ng-blur="changeParameter(parameter.name, operator, operator.high, 'glyph', true, 'blur')" ng-keyup="changeParameter(parameter.name, operator, operator.high, 'glyph', true, $event)">
+                                <input class="range-input range-left" ng-model="operator.low.current" ng-init="operator.low.old = operator.low.current" ng-blur="changeValue(parameter.name, operator, operator.low, 'glyph', true, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.low, 'glyph', true, $event)"> to
+                                <input class="range-input" ng-model="operator.high.current" ng-init="operator.high.old = operator.high.current" ng-blur="changeValue(parameter.name, operator, operator.high, 'glyph', true, 'blur')" ng-keyup="changeValue(parameter.name, operator, operator.high, 'glyph', true, $event)">
                             </span>
                         </div>
                     </div>               
@@ -44,15 +44,29 @@
         </div>
     </div>
        
-    <div id="parameters-control-panel" class="control-panel" ng-if="data.parametersPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
+    <div id="parameters-control-panel" ng-if="data.view.parameterOperatorPanel > 0" ng-style="{'top': parameterPanelTop, 'left': parameterPanelLeft}">
         <div id="control-panel-parameters">
-            <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter.name == panelParameter.name}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameterToPanel(parameter)">{{parameter.displayName}}</div>
+            <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter.name == panelParameter.name}" class="control-panel-parameter control-panel-button push-button" ng-click="addParameterToPanel(parameter)">{{parameter.name}}</div>
         </div>
         <div id="control-panel-operators">
             <div ng-repeat="operator in operators" ng-class="{'selected': operator.name == panelOperator.name}" class="control-panel-operator control-panel-button push-button" ng-click="addOperatorToPanel(operator)">{{operator.name}}</div>
         </div>
-        <div class="control-panel-cancel control-panel-button push-button" ng-click="data.parametersPanel = 0">
+        <div class="control-panel-cancel control-panel-button push-button" ng-click="data.view.parameterOperatorPanel = 0">
             Cancel
+        </div>
+    </div>
+    
+    <div class="single-panel" ng-if="data.view.parameterPanel.display" ng-style="{'left': data.view.parameterPanel.left + 'px', 'top': data.view.parameterPanel.top + 'px'}">
+        <div ng-repeat="parameter in parameters" ng-class="{'selected': parameter.name == data.view.parameterPanel.selected}" class="control-panel-parameter control-panel-button push-button" ng-click="changeParameter(parameter)">{{parameter.name}}</div>
+        <div class="control-panel-cancel control-panel-button push-button" ng-click="removeParameter()">
+            Remove
+        </div>
+    </div>
+    
+    <div class="single-panel" class="control-panel" ng-if="data.view.operatorPanel.display" ng-style="{'left': data.view.operatorPanel.left + 'px', 'top': data.view.operatorPanel.top + 'px'}">
+        <div ng-repeat="operator in operators" ng-class="{'selected': operator.name == data.view.operatorPanel.selected}" class="control-panel-parameter control-panel-button push-button" ng-click="changeOperator(operator)">{{operator.name}}</div>
+        <div class="control-panel-cancel control-panel-button push-button" ng-click="removeOperator()">
+            Remove
         </div>
     </div>
     
