#392 administration of (initial) weight (onLength) on point level

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -1234,7 +1234,7 @@
             }
             
     .selected-parameter {
-        background: #F01616;
+        background: #fff;
     }
             
         
